# http-wizz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: API_REFERENCE.md
examples/: benchmark_comparison.py  data_pipeline_geocoding.py  hacker_news_scraper.py  proxy_integration.py  strict_api_consumer.py
src/http_wizz/: __init__.py  client.py
tests/: test_custom_retry.py  test_fetcher.py  test_rate_limited_session.py
