[build-system]
requires = ["setuptools>=61.0, <70"]
build-backend = "setuptools.build_meta"

[project]
name = "http-wizz"
version = "0.1.0"
description = "A powerful async library to fetch URLs with strict rate limiting (requests per second)."
readme = "README.md"
authors = [{ name = "Gemini User" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/tommckenna1/http-wizz"

[tool.setuptools.packages.find]
where = ["src"]
